# WEB_HW3

file_sorter/: pyproject.toml
file_sorter/file_sorter/: clean.py  factorize.py  main.py
