[tool.poetry]
name = "file-sorter"
version = "0.1.0"
description = ""
authors = ["demagoit <33demagoit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
